--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "cordova-plugin-store",
   "version": "1.0.0",
   "description": "File store plugin",
-  "main": "index.js",
+  "main": "store.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/masterwebdev/cordova-plugin-memory"
+    "url": "https://github.com/masterwebdev/cordova-plugin-store"
   },
   "author": "",
   "license": "Apache-2.0",
